Made a new branch for playing around and testing

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>your profile is here</h1>
+    <h1>your profile is here hehe</h1>
 
 
 {% endblock %}
