--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,14 +18,17 @@
                 
                 <div class="collapse navbar-collapse " id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
+                    <li class="nav-item"> 
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
+                        <a class="nav-link" href="/register">Register</a>
+                    </li>
+                    <li class="nav_item">
+                        <a class="nav-link" href="/profile">Profile</a>
                     </li>
 
                     </ul>
