--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -19,6 +19,7 @@
             {% endfor %}
         </p>
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit() }}</p>
+        <p>{{ form.submit() }}</p><br>
+        <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
     </form>
 {% endblock %}
