--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,31 +1,60 @@
-<html>
-    <head>
-        {% if title %}
-        <title>{{ title }} - microblog</title>
-        {% else %}
-        <title>microblog</title>
-        {% endif %}
-    </head>
-    <body>
-        <div>
-            Microblog:
-            <a href="{{ url_for('index') }}">Home</a>
-            {% if current_user.is_anonymous %}
-            <a href="{{ url_for('login') }}">Login</a>
-            {% else %}
-            <a href="{{ url_for('logout') }}">Logout</a>
-            {% endif %}
-        </div>
-        <hr>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
-        {% block content %}{% endblock %}
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/style.css">
+
+    {% block styling %}
+    {% endblock %}
+</head>
+<body>
+
+    <div>
+        <header>
+            <nav class="navbar navbar-expand-sm  navigation ">
+                {% if current_user.is_anonymous %}
+                <a class="navbar-brand" href="{{ url_for('homePage') }}"><img class="logo" src="../static/LogoNav.png" alt="CSSGLogo"></a>
+                {% else %}
+                <a class="navbar-brand" href="{{ url_for('homePage') }}"><img class="logo" src="../static/Logo2Nav.png" alt="CSSGLogo"></a>
+                {% endif %}
+
+
+                <div class="collapse navbar-collapse pos" >
+                    <ul class="navbar-nav">
+                        {% if current_user.is_anonymous %}
+                        <!-- <li >
+                            <a class="col-6"  href="{{ url_for('homePage') }}"><img  src="../static/WelcomeNav.png" alt="Welcome"></span></a>
+                        </li> -->
+                        <li >
+                            <a class="col-6"  href="{{ url_for('login') }}"><img class="navicons" src="../static/LoginNav.png" alt="Login"></a>
+                        </li>
+                        <li>
+                            <a class="col-6" href="{{ url_for('register') }}"><img class="navicons" src="../static/RegisterNav.png" alt="Register"></a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item ">
+                            <a class="nav-link" href="{{ url_for('profile') }}"><img class="navicons" src="../static/ProfileNav.png" alt="My Profile"></span></a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="{{ url_for('chat') }}"><img class="navicons" src="../static/ChatNav.png" alt="Chat"></a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="{{ url_for('logout') }}"><img class="navicons" src="../static/LogoutNav.png" alt="Logout"></a>
+                        </li>
+                        {% endif %}
+
+                    </ul>
+                </div>
+                </nav>
+        </header>
+    </div>  
+    {% block content%}
+
+    {% endblock %}    
+</body>
 </html>
