--- a/app/static/style.css
+++ b/app/static/style.css
@@ -5,8 +5,8 @@ div.header {
     }
 
 .navigation {
-    margin-top: 50px;
-    margin-left: 70px;
+    margin-top: 30px;
+    margin-left: 30px;
     
 }
 *{
@@ -19,8 +19,21 @@ body{
 .logo{
     width: 50%;
 }
+
+
 .navicons{
     height: 50px;
+}
+
+.navicons:hover{
+  background: image('NavHover2.png');
+  background: url('NavHover.png');
+  background-size:contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 20px;
+  transition: background 1s ease;
+
 }
 
 .welcomeBlurb {
@@ -42,7 +55,7 @@ body{
 
 .pos {
     position: absolute;
-    top: 20px;
+    top: 5px;
     right: 0;
   }
 
@@ -72,3 +85,29 @@ body{
     border-radius: 20px;
     margin: 10px;
   }
+
+
+
+  .chatBox {
+    background-color:rgba(255, 255, 255, 0.5);
+    display:block;
+    text-align: center;
+    width: 40%;
+    margin: 40px auto;
+    height: 600px;
+    border-radius: 80px;
+    padding: 0 40px;
+}
+
+
+.login{
+  width: 50%;
+  margin: auto;  
+  display: block;
+  height: auto;
+  padding: 50px;
+  border: solid 1px red;
+  background: rgba(203, 203, 203,0.5);
+  border-radius: 50px;
+  margin-top: 40px;
+}
