--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -1,5 +1,53 @@
 {% extends "base.html" %}
 
+{% block styling %}
+<style>
+    body{
+        background: url('/static/ChatBg.jpg');
+        background-repeat: no-repeat;
+        background-size: contain;
+        }
+</style>
+{% endblock %}
+
 {% block content %}
-    <h1>this area is for chatbox</h1>
+    <div class="chatBox">
+        <h1>Chatroom</h1>
+        <div class="row">
+            <p>Midhin: Hello brether</p>
+        </div>
+        <div class="row">
+            <p>Aarif:  Eyy</p>
+        </div>
+        <div class="row">
+            <p>Sahil: Eyyy!! Whats goood!</p>
+        </div>
+        <div class="row">
+            <p>Nico: Yow</p>
+        </div>
+        <div class="row">
+            <p>Rico: Hey man!</p>
+        </div>
+        <div class="row">
+            <p>Lance: Wazzup</p>
+        </div>
+        <div class="row">
+            <p>Midhin: Hello brether</p>
+        </div>
+        <div class="row">
+            <p>Aarif:  Eyy</p>
+        </div>
+        <div class="row">
+            <p>Sahil: Eyyy!! Whats goood!</p>
+        </div>
+        <div class="row">
+            <p>Nico: Yow</p>
+        </div>
+        <div class="row">
+            <p>Rico: Hey man!</p>
+        </div>
+        <div class="row">
+            <p>Lance: Wazzup</p>
+        </div>
+    </div>
 {% endblock %}
