--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
 
+{% block styling %}
+<style>
+    body{
+        background: url('/static/LoginBg.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+</style>
+{% endblock %}
+
 {% block content %}
+<div class="login">
     <h1>Sign In</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
@@ -22,4 +33,6 @@
         <p>{{ form.submit() }}</p>
         <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
     </form>
+</div>
+    
 {% endblock %}
