--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
 
+{% block styling %}
+<style>
+    body{
+        background: url('/static/RegisterBg.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+</style>
+{% endblock %}
+
 {% block content %}
+<div class="login">
     <h1>Register</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
@@ -34,4 +45,6 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
+</div>
+
 {% endblock %}
