--- a/app/templates/homePage.html
+++ b/app/templates/homePage.html
@@ -2,11 +2,9 @@
 {% block styling %}
     <style>
         body{
-            background: url('/static/HomeBg.jpg');
+            background: url('/static/HomeBg.jpg'), radial-gradient(rgb(50, 22, 175) 0%, rgb(0, 0, 0) 100%);
             background-repeat: no-repeat;
-            background-size:contain;
-            background-color: rgb(17, 13, 56);
-
+            background-size:auto;
             }
     </style>
 {% endblock %}
