--- a/app/static/style.css
+++ b/app/static/style.css
@@ -13,16 +13,20 @@ div.header {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
-    background-color: rgb(17, 13, 56);
+body {
+  background-color: rgb(2, 0, 36);
+  background-color: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
 }
+
+
 .logo{
     width: 50%;
 }
 
 
 .navicons{
-    height: 50px;
+    width: 70%;
+    height: 60%;
 }
 
 .navicons:hover{
@@ -33,7 +37,6 @@ body{
   background-position: center;
   border-radius: 20px;
   transition: background 1s ease;
-
 }
 
 .welcomeBlurb {
@@ -42,7 +45,7 @@ body{
     text-align: center;
     width: 80%;
     margin: 100px auto;
-    height: auto;
+    height: 250px;
     border-radius: 80px;
     padding: 20px 0px;
 }
@@ -60,7 +63,7 @@ body{
   }
 
   .welcomeText{
-    font-size: 20px;
+    font-size:15px;
   }
 
 
@@ -69,21 +72,18 @@ body{
     display:block;
     text-align: center;
     width: 80%;
-    margin: auto;
     height: auto;
     border-radius: 80px;
-    margin-top: 300px;
-
+    margin: auto;
   }
 
-  .infoRow{
-    margin: 30px 0px;
-  }
+
+
   .infoBox{
     background-color: rgba(255, 255, 255, 0.5);
     height: auto;
     border-radius: 20px;
-    margin: 10px;
+    margin: 20px 10px;
   }
 
 
