--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -5,7 +5,7 @@
     body{
         background: url('/static/ChatBg.jpg');
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
         }
 </style>
 {% endblock %}
