--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -15,6 +15,14 @@
     <h1>Sign In</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
+
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <span style="color: red" class="alert">{{ message }}</span>
+            {% endfor %}
+        {% endif %}
+        {% endwith %}
         <p>
             {{ form.username.label }}<br>
             {{ form.username(size=32) }}<br>
