--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,19 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-<table>
-    <tr valign="top">
-        <td><img src="{{ user.avatar(128) }}"></td>
-        <td><h1>User: {{ user.username }}</h1></td>
-    </tr>
-</table>
-    <hr>
-    {% for post in posts %}
     <table>
         <tr valign="top">
-            <td><img src="{{ post.author.avatar(36) }}"></td>
-            <td>{{ post.author.username }} says:<br>{{ post.body }}</td>
+            <td><img src="{{ user.avatar(128) }}"></td>
+            <td><h1>User: {{ user.username }}</h1>
+            {% if user.about_me %}<p>{{ user.about.me }}</p>{% endif %}
+            </td>
         </tr>
     </table>
+    <hr>
+    {% for post in posts %}
+        {% include '_post.html' %}
     {% endfor %}
 {% endblock %}
