--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,16 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>profile is working!! Login is required here</h1>
+    <!--<h1>profile is working!! Login is required here</h1>
     <h1>Hi, {{ current_user.username }}!</h1>
     {% for post in posts %}
     <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
-    {% endfor %}
+    {% endfor %}-->
     <table>
         <tr valign="top">
             <td><img src="{{ current_user.avatar(128) }}"></td>
-            <td><h1>User: {{ current_user.username }}</h1></td>
+            <td><h1>User: {{ current_user.username }}</h1>
+                {% if current_user.about_me %}<p>{{ current_user.about_me }}</p>{% endif %}
+                {% if current_user.last_seen %}<p>Last seen on: {{ current_user.last_seen }}</p>{% endif %}
+                
+            </td>
         </tr>
     </table>
+            {% if current_user == current_user %}
+            <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
+            {% endif %}
     <hr>
 {% endblock %}
