--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -21,5 +21,5 @@
     </div>
 
 
-    <script src="../static/script.js"></script>
+    <script src="{{url_for('static', filename='script.js')}}"></script>
 {% endblock %}
