--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,7 +38,7 @@
                         </li>
                         {% else %}
                         <li>
-                            <a class="col-6" href="{{ url_for('profile', username=current_user.username) }}"><img class="navicons" src="../static/ProfileNav.png" alt="My Profile"></span></a>
+                            <a class="col-6" href="{{ url_for('profile', username=current_user.username) }}"><img class="navicons" src="../static/ProfileNav.png" alt="My Profile"></a>
                         </li>
                         <li>
                             <a class="col-6" href="{{ url_for('chat') }}"><img class="navicons" src="../static/ChatNav.png" alt="Chat"></a>
