--- a/app/templates/homePage.html
+++ b/app/templates/homePage.html
@@ -4,7 +4,7 @@
         body{
             background: url('/static/HomeBg.jpg'), radial-gradient(rgb(50, 22, 175) 0%, rgb(0, 0, 0) 100%);
             background-repeat: no-repeat;
-            background-size:auto;
+            background-size:cover;
             }
     </style>
 {% endblock %}
