validation for login and register works

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -56,5 +56,7 @@
     {% block content%}
 
     {% endblock %}    
+    <script src="{{ url_for('static', filename='validations.js') }}"></script>
+
 </body>
 </html>
