--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,7 +13,9 @@
 {% block content %}
 <div class="login">
     <h1>Sign In</h1>
-    <form action="" method="post" novalidate>
+    <form action="" method="post" id="loginForm" >
+        <div id="errorBox" style="color: red; display:none; white-space: pre-line;"></div>
+
         {{ form.hidden_tag() }}
 
         {% with messages = get_flashed_messages() %}
@@ -42,5 +44,8 @@
         <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
     </form>
 </div>
+
     
+
+
 {% endblock %}
