--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -13,7 +13,8 @@
 {% block content %}
 <div class="login">
     <h1>Register</h1>
-    <form action="" method="post">
+    <form action="" method="post" id="registerForm">
+        <div id="errorBox" style="color: red; display:none; white-space: pre-line;"></div>
         {{ form.hidden_tag() }}
         <p>
             {{ form.username.label }}<br>
