Tidy'ed (?) up homepage, added description and helped fix .csv files for maps and guns

--- a/app/templates/homePage.html
+++ b/app/templates/homePage.html
@@ -16,12 +16,15 @@
     <div class=" welcomeTitle"><h1>Welcome to CSGGHUB!!</h1></div> 
        
     <p class="welcomeText">
-        This is a CITS3404 - Agile Web Development Project in Collaboration with Lance, Sahil and Midhin.
+        This is a CITS3403 - Agile Web Development Project in Collaboration with Lance, Sahil and Midhin.
     </p>
     <p class="welcomeText">
-        The purpose of this project is to create a chat system that enables users to signup/register and login.
-        The system will have a back-end database that will log all registered users and their chat history.
-        Information about the game will be integrated in a chat bot system. Users can chat with other user to pair up and create a pefect team to dominate in CSGO!
+        Users will be able to create accounts by providing their desired username, email address, and password. This information will be stored securely in the system's back-end database.
+        Registered users can log in to the system using their credentials. This process will authenticate the user's identity and grant them access to the chat system.
+        The chat system will allow users to communicate with each other in real-time. They will be able to send text messages. The chat history will be logged in the back-end database, ensuring that conversations are retained for future reference.
+        The back-end database will store information about registered users, including their usernames, email addresses, and hashed passwords. This data will be used for user authentication during the login process.
+        Users will have the ability to chat with each other, form teams, and find suitable teammates for playing CSGO. They can discuss strategies, share their gaming preferences, and coordinate to create a perfect team that can rule the game!
+
     </p>
 </div>
 
@@ -29,19 +32,26 @@
     <div class="row infoRow">
         <div class="col-4 ">
             <div class="infoBox">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim placeat eum numquam debitis ipsam exercitationem nulla itaque perspiciatis soluta quam, iure nam, suscipit ipsum minus ut quaerat odio odit temporibus.</p>
+                <p>
+                    <b>Chat System for CSGO Players</b><br>
+                    A group chat with likeminded players who want only one thing, to rise to the top and dominate in the Counter Strike Global Offensive realm. Take your place amongst greatness and achieve the objective.
+                </p>
             </div>  
         </div>
         <div class="col-4 ">
             <div class="infoBox">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim placeat eum numquam debitis ipsam exercitationem nulla itaque perspiciatis soluta quam, iure nam, suscipit ipsum minus ut quaerat odio odit temporibus.</p>
-
+                <p>
+                    <b>Accurate Database for CSGO info</b><br>
+                    An upto date comprehensive database which covers only the latest guns and maps in the game at present. Configured to be consistent amongst all players with fallicies in place.
+                </p>
             </div>
         </div>
         <div class="col-4 ">
             <div class="infoBox">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim placeat eum numquam debitis ipsam exercitationem nulla itaque perspiciatis soluta quam, iure nam, suscipit ipsum minus ut quaerat odio odit temporibus.</p>
-
+                <p>
+                    <b>Automated chatbot system commands</b><br>
+                    ~ One of a kind chatbot which is triggered using a special key only known to a few, queries a database and has the ability to find a players favourite map and weapons.
+                </p>
             </div>
         </div>
     </div>
@@ -49,20 +59,26 @@
     <div class="row infoRow">
         <div class="col-4 ">
             <div class="infoBox">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim placeat eum numquam debitis ipsam exercitationem nulla itaque perspiciatis soluta quam, iure nam, suscipit ipsum minus ut quaerat odio odit temporibus.</p>
-
+                <p>
+                    <b>Connect with other players and find friends</b><br>
+                    An exciting and dynamic group chat platform designed exclusively for passionate gamers and their friends. It serves as a vibrant hub where players with shared interests can connect, communicate, and coordinate their gaming adventures effortlessly.
+                </p>
             </div>
         </div>
         <div class="col-4 ">
             <div class="infoBox">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim placeat eum numquam debitis ipsam exercitationem nulla itaque perspiciatis soluta quam, iure nam, suscipit ipsum minus ut quaerat odio odit temporibus.</p>
-
+                <p>
+                    <b>Learn more about CSGO</b><br>
+                    CSGO is an action packed game which takes team co-ordination to the next level, is an epitome of practice makes perfect and is a platform to showcase your moxie, unique playstyle and creativity, learn more about this game <a href= "https://blog.counter-strike.net/index.php/about/">here</a> and <a href= "https://en.wikipedia.org/wiki/Counter-Strike:_Global_Offensive">here.</a>
+                </p>
             </div>
         </div>
         <div class="col-4 ">
             <div class="infoBox">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim placeat eum numquam debitis ipsam exercitationem nulla itaque perspiciatis soluta quam, iure nam, suscipit ipsum minus ut quaerat odio odit temporibus.</p>
-
+                <p>
+                    <b>Rise above all</b><br>
+                    Are you willing to show us that you have the determination to surpass obstacles, embrace growth, and strive for excellence. With unwavering passion and a relentless spirit, gamers rise above all, conquering and forging their own path to victory.
+                </p>
             </div>
         </div>
     </div>
