wip special commands

--- a/app/templates/homePage.html
+++ b/app/templates/homePage.html
@@ -2,7 +2,7 @@
 {% block styling %}
     <style>
         body{
-            background: url('/static/HomeBg.jpg'), radial-gradient(rgb(50, 22, 175) 0%, rgb(0, 0, 0) 100%);
+            background: url('/static/Landing.jpg'), radial-gradient(rgb(50, 22, 175) 0%, rgb(0, 0, 0) 100%);
             background-repeat: no-repeat;
             background-size:cover;
             }
