--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -1,5 +1,16 @@
 {% extends "base.html" %}
 
+{% block styling %}
+<style>
+    body{
+        background: url('/static/EditProfileBg.jpg');
+        background-repeat: no-repeat;
+        background-size:cover;
+        }
+</style>
+{% endblock%}
+
+
 {% block content %}
     <h1>Edit Profile</h1>
     <form action="" method="post">
