special features in progress

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -5,7 +5,7 @@
         body{
             background: url('/static/ProfileBg.jpg'), radial-gradient(rgb(50, 22, 175) 0%, rgb(0, 0, 0) 100%);
             background-repeat: no-repeat;
-            background-size:auto;
+            background-size:cover;
             }
     </style>
 {% endblock %}
