--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -4,31 +4,32 @@
 <style>
     body{
         background: url('/static/ChatBg.jpg');
-        
         background-size: 100%;
-        }
+    }
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
-<script src="../static/script.js">
-    
-</script>
 {% endblock %}
 
 {% block content %}
-
     <div class="messages col-4">
         <div class="chatBox" id="chat">
+            <input type="text" id="search" placeholder="Search messages...">
             <ul id="chatMessages">
             </ul>
-    
         </div>
         <input type="text" id="message" placeholder="Enter a message">
-
     </div>
+{% endblock %}
 
-
-
-
-
-
+{% block scripts %}
+<script src="../static/script.js">
+</script>
+<script>
+document.getElementById('search').addEventListener('keyup', function() {
+    var searchQuery = this.value;
+    // Send a request to your server with searchQuery, and then handle the response
+    // The response should be the search results, which you can then add to chatMessages
+    // This requires implementing logic to handle AJAX request and response
+});
+</script>
 {% endblock %}
