--- a/app/static/style.css
+++ b/app/static/style.css
@@ -213,3 +213,12 @@ body {
   display: table;
   max-width: 100%;
 }
+
+.private{
+  color: greenyellow;
+}
+
+.edit_profile_heading{
+  text-align: center;
+  color: rgba(0, 204, 255, 0.842);
+}
