--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -12,23 +12,25 @@
 
 
 {% block content %}
-    <h1>Edit Profile</h1>
-    <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.about_me.label }}<br>
-            {{ form.about_me(size=300) }}<br>
-            {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
+<h1 class="edit_profile_heading"><b>Edit Profile</b></h1>
+<form action="" method="post" style=" text-align: center;">
+    {{ form.hidden_tag() }}
+    <p>
+        <div>
+        <label style="display: block; text-align: center; color: rgb(0, 229, 255);">{{ form.username.label }}</label><br>
+        {{ form.username(size=32, style=";color: black; background-color: rgba(245, 245, 245,0.8); border: 1px solid black; border-radius: 20px;") }}<br>
+        {% for error in form.username.errors %}
+        <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+        </div>
+    </p>
+    <p>
+        <label style=" max-height: 100px; display: inline-block; color: rgb(255, 0, 0);">{{ form.about_me.label }}</label><br>
+        {{ form.about_me(size=100,  style="width: 500px; height: 100px; color: black; background-color: rgba(245, 245, 245,0.8); border: 1px solid black; border-radius: 20px;") }}<br>
+        {% for error in form.about_me.errors %}
+        <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+    </p>
         <p>
             <div class="private">
                 <input type="checkbox" id="UserPrivate" name="isPrivate" value="true"
