--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,7 +13,7 @@
 {% block content %}
 <div class="login">
     <h1>Sign In</h1>
-    <form action="" method="post" id="loginForm" >
+    <form method="post" id="loginForm" >
         <div id="errorBox" style="color: red; display:none; white-space: pre-line;"></div>
 
         {{ form.hidden_tag() }}
